<resources>
    <string name="app_name">HOZON</string>
    <string name="button_login">Login</string>
    <string name="button_registration">Sign Up</string>
    <string name="save_amp_give"><![CDATA[save & give]]></string>
    <string name="hozon">HOZON</string>
    <string name="thankyou_2">For any doubts</string>
    <string name="thankyou_1">We will contact you\nWithin 10 Minutes</string>
    <string name="about_us">About US</string>
    <string name="about_1"><![CDATA[❖ Hozon is application based Food waste management system can assist in collecting the Leftover food from hotel & Restaurants or any other function distribute among tose in need .]]></string>
    <string name="about_2">❖ By using this app benefits will be both the restaurant and the needy.</string>
    <string name="about_3">❖ User can play role in saving food waste and help the needy.</string>
    <string name="about_4">How to use this application</string>
    <string name="about_5">2. You can login by your registered mail ID and password.</string>
    <string name="about_6">3. Then first read the Terms and Condition then click the check box for accepting terms and conditions.</string>
    <string name="about_7">4. After click the check box just fill the reponse form and wait for 10 minutes to our team contact you.</string>
    <string name="todo">TODO</string>
    <string name="hozon_logo">Hozon Logo</string>
    <string name="login">Login</string>
    <string name="new_user">New user ? Register here.</string>
    <string name="pass">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to Login.</string>
    <string name="todo2">TODO</string>
    <string name="terms_and_conditions">Terms and Conditions :</string>
    <string name="terms1">      ❖ Make sure the food in good condition before we come and collect.</string>
    <string name="terms2">      ❖ Save the food in safe place also in proper way.</string>
    <string name="terms3">      ❖ Make sure your food was cooked before 5 to 7 hours you send the form</string>
    <string name="terms4">      ❖ If you accept tease terms and condition the check the box and fill response form.</string>
    <string name="terms5">I agree the terms and conditions</string>
    <string name="terms6">Response</string>
    <string name="terms7">Click here to know \nMore About Us</string>
    <string name="todo3">TODO</string>
    <string name="response">RESPONSE</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="location">Location</string>
    <string name="near_location">Near Location</string>
    <string name="qty">QTY</string>
    <string name="food_type">Food Type</string>
    <string name="submit">SUBMIT</string>
</resources>