<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".response">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/hozon_icon"
        android:transitionName="logo_image"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView342"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bodon"
                android:text="@string/hozon"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/wiliam"
                android:text="@string/save_amp_give"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/babe"
        android:gravity="center"
        android:letterSpacing="0.06"
        android:text="@string/response"
        android:textColor="#000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:transitionName="logo_text"
        tools:ignore="TextSizeCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="#737373"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields,TextSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="#737373"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry,TextSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back"
            android:ems="10"
            android:textColorHint="#737373"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/number"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry,TextFields,TextSizeCheck,VisualLintTextFieldSize" />


        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#737373"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/location"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back"
            android:ems="10"
            android:minHeight="48dp"
            android:textColorHint="#737373"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/qty"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry,TextSizeCheck,VisualLintTextFieldSize"
            android:inputType="number" />

        <EditText
            android:id="@+id/near_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#737373"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/near_location"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="Autofill,RtlSymmetry,TextSizeCheck,VisualLintTextFieldSize"/>

        <EditText
            android:id="@+id/food_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back"
            android:ems="10"
            android:textColorHint="#737373"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/food_type"
            android:textColor="#737373"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintTextFieldSize"
            android:autofillHints="" />




    </LinearLayout>

    <Button
        android:id="@+id/response_submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="#C6192617"
        android:padding="5dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"/>


</LinearLayout>